[gd_scene load_steps=14 format=3 uid="uid://db4fasw0pjqt"]

[ext_resource type="Script" uid="uid://b2pvviijo7kq0" path="res://scripts/update.gd" id="1_h62y5"]
[ext_resource type="Texture2D" uid="uid://tvhl7jwl7b7n" path="res://assets/svg/refresh-cw.svg" id="2_31tjq"]
[ext_resource type="Texture2D" uid="uid://bcrkgncj31yaj" path="res://assets/svg/x.svg" id="3_3bn4t"]
[ext_resource type="Texture2D" uid="uid://cwkme5uibanec" path="res://assets/svg/search.svg" id="4_uc0ba"]
[ext_resource type="Texture2D" uid="uid://bam8ilvog10jw" path="res://assets/svg/cloud-alert.svg" id="6_t6hcb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v0l8b"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.101961, 0.105882, 0.184314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3oiyq"]
content_margin_left = 10.0
content_margin_top = 0.0
content_margin_right = 10.0
content_margin_bottom = 0.0
bg_color = Color(0.176471, 0.192157, 0.258824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5sd4q"]
content_margin_left = 20.0
content_margin_right = 20.0
bg_color = Color(0.176471, 0.192157, 0.258824, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="LabelSettings" id="LabelSettings_xeohp"]
font_color = Color(0.901961, 0.223529, 0.27451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wp4xf"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.101961, 0.105882, 0.184314, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojkyp"]
atlas = ExtResource("6_t6hcb")
region = Rect2(1, 3, 22, 18)

[sub_resource type="LabelSettings" id="LabelSettings_jw2kc"]
font_size = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7hrul"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(0.901961, 0.223529, 0.27451, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="Update" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_h62y5")

[node name="UpdateRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true

[node name="MarginContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v0l8b")

[node name="Main" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 9

[node name="MarginContainer4" type="PanelContainer" parent="MarginContainer/Main"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3oiyq")

[node name="title" type="HBoxContainer" parent="MarginContainer/Main/MarginContainer4"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/Main/MarginContainer4/title"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="MarginContainer/Main/MarginContainer4/title"]
layout_mode = 2
size_flags_horizontal = 3
text = "Updates"
horizontal_alignment = 1

[node name="reloadButton" type="Button" parent="MarginContainer/Main/MarginContainer4/title"]
layout_mode = 2
size_flags_vertical = 0
icon = ExtResource("2_31tjq")
flat = true

[node name="searchbar" type="MarginContainer" parent="MarginContainer/Main"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Main/searchbar"]
layout_mode = 2

[node name="clearButton" type="Button" parent="MarginContainer/Main/searchbar/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 0
icon = ExtResource("3_3bn4t")
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Main/searchbar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="search" type="TextEdit" parent="MarginContainer/Main/searchbar/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_5sd4q")
placeholder_text = "Search here"

[node name="alert" type="Label" parent="MarginContainer/Main/searchbar/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "at least 3 letters"
label_settings = SubResource("LabelSettings_xeohp")

[node name="searchbutton" type="Button" parent="MarginContainer/Main/searchbar/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "search"
icon = ExtResource("4_uc0ba")

[node name="searchRequest" type="HTTPRequest" parent="MarginContainer/Main/searchbar"]
unique_name_in_owner = true

[node name="MarginContainer" type="PanelContainer" parent="MarginContainer/Main"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wp4xf")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Main/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="novel_holder" type="HFlowContainer" parent="MarginContainer/Main/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 19
alignment = 1

[node name="error_page" type="VBoxContainer" parent="MarginContainer/Main/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Main/MarginContainer/error_page"]
texture_filter = 1
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
size_flags_vertical = 10
texture = SubResource("AtlasTexture_ojkyp")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Main/MarginContainer/error_page"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/Main/MarginContainer/error_page/VBoxContainer"]
layout_mode = 2
text = "oops.."
label_settings = SubResource("LabelSettings_jw2kc")
horizontal_alignment = 1

[node name="error" type="Label" parent="MarginContainer/Main/MarginContainer/error_page/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Something went wrong"
horizontal_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/Main/MarginContainer/error_page/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Reload Page"

[node name="errorAlert" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="errorAlert"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -65.0
offset_right = 20.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_7hrul")
text = "An error occured"

[connection signal="pressed" from="MarginContainer/Main/MarginContainer4/title/reloadButton" to="." method="_on_reload_button_2_pressed"]
[connection signal="pressed" from="MarginContainer/Main/searchbar/HBoxContainer/clearButton" to="." method="_on_clear_pressed"]
[connection signal="text_changed" from="MarginContainer/Main/searchbar/HBoxContainer/VBoxContainer/search" to="." method="_on_search_text_changed"]
[connection signal="pressed" from="MarginContainer/Main/searchbar/HBoxContainer/searchbutton" to="." method="_on_searchbutton_pressed"]
[connection signal="pressed" from="MarginContainer/Main/MarginContainer/error_page/VBoxContainer/Button" to="." method="_on_reload_button_2_pressed"]
